--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "bs5-simple-starter",
   "version": "1.0.0",
-  "description": "Starter template for Bootstrap",
+  "description": "Simple workflow for working with and customizing Bootstrap 5",
   "main": "index.js",
   "scripts": {
     "sass:build": "sass --no-source-map scss:css",
     "sass:watch": "sass --no-source-map --watch scss:css"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
+  "author": "Brad Traversy",
+  "license": "MIT",
+  "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.3",
     "sass": "^1.83.1"
